--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,7 @@
         <div id="ml-hud" class="ml-hud">
           <p class="ml-hud-title">AI Learning</p>
           <p id="ml-hud-msg" class="ml-hud-msg">Vehicle vision sharpens as more scenes are observed.</p>
+          <p class="ml-hud-warning" role="note">Warning: After 6 PM, AI detection quality can drop. We are actively improving it with ongoing model training.</p>
           <div class="ml-hud-stats">
             <span>L: <strong id="ml-hud-level">Warmup</strong></span>
             <span>S: <strong id="ml-hud-frames">0</strong></span>
