--- a/public/admin.html
+++ b/public/admin.html
@@ -341,6 +341,19 @@
                 <button id="btn-save-night-profile" class="btn-secondary" type="button">Save Night Profile</button>
                 <span id="night-profile-msg" class="muted"></span>
               </div>
+
+              <div class="night-live-panel">
+                <h5>Night Tracking Live Data</h5>
+                <p id="night-live-summary" class="muted">Checking live night tracking state...</p>
+                <div id="night-live-grid" class="night-live-grid">
+                  <div class="night-live-item"><span>Local Time</span><strong id="night-live-now">-</strong></div>
+                  <div class="night-live-item"><span>Window State</span><strong id="night-live-window-state">-</strong></div>
+                  <div class="night-live-item"><span>Effective Thresholds</span><strong id="night-live-thresholds">-</strong></div>
+                  <div class="night-live-item"><span>Capture Counters</span><strong id="night-live-counters">-</strong></div>
+                  <div class="night-live-item"><span>Latest Telemetry</span><strong id="night-live-telemetry">-</strong></div>
+                  <div class="night-live-item"><span>Latest Training</span><strong id="night-live-training">-</strong></div>
+                </div>
+              </div>
             </div>
           </div>
 
