--- a/public/admin.html
+++ b/public/admin.html
@@ -28,6 +28,7 @@
   <nav class="admin-topnav">
     <button class="admin-nav-btn active" data-panel="overview">Overview</button>
     <button class="admin-nav-btn" data-panel="ml">ML Control</button>
+    <button class="admin-nav-btn" data-panel="detection">Detection</button>
     <button class="admin-nav-btn" data-panel="bets">Bets</button>
     <button class="admin-nav-btn" data-panel="users">Users</button>
   </nav>
@@ -285,6 +286,7 @@
 
             <div class="ml-control-actions">
               <button id="btn-ml-retrain" class="btn-primary">Trigger Retrain</button>
+              <button id="btn-ml-train-captures" class="btn-secondary" type="button">Train New Captures</button>
               <span id="ml-control-msg" class="muted"></span>
             </div>
 
@@ -383,6 +385,139 @@
               <span id="ml-capture-copy-msg" class="muted"></span>
             </div>
           </div>
+        </div>
+      </section>
+
+      <section class="admin-panel" id="panel-detection">
+        <div class="panel-head">
+          <h2>Detection Studio</h2>
+          <p>Detection status, scan coverage, and visual box customization for live feed overlays.</p>
+        </div>
+
+        <div class="detection-status-grid">
+          <article class="stat-card is-secondary">
+            <div class="stat-val" id="det-status-model">-</div>
+            <div class="stat-label">Active Model</div>
+          </article>
+          <article class="stat-card is-secondary">
+            <div class="stat-val" id="det-status-conf">-</div>
+            <div class="stat-label">Avg Confidence</div>
+          </article>
+          <article class="stat-card is-secondary">
+            <div class="stat-val" id="det-status-last">-</div>
+            <div class="stat-label">Last Telemetry</div>
+          </article>
+          <article class="stat-card is-secondary">
+            <div class="stat-val" id="det-status-scan">FULL</div>
+            <div class="stat-label">Feed Scan Mode</div>
+          </article>
+        </div>
+
+        <div class="overview-grid" style="margin-top:10px;">
+          <section class="card-box">
+            <h3>Detection Runtime</h3>
+            <div class="rounds-list data-list">
+              <div class="round-row"><div class="round-row-info"><span class="round-row-id">AI Loop</span><span class="round-row-meta" id="det-runtime-ai">Checking...</span></div></div>
+              <div class="round-row"><div class="round-row-info"><span class="round-row-id">Stream URL</span><span class="round-row-meta" id="det-runtime-stream">Checking...</span></div></div>
+              <div class="round-row"><div class="round-row-info"><span class="round-row-id">Night Profile State</span><span class="round-row-meta" id="det-runtime-night">Checking...</span></div></div>
+              <div class="round-row"><div class="round-row-info"><span class="round-row-id">Current Focus</span><span class="round-row-meta" id="det-runtime-focus">Full-feed detection with zone-aware counting</span></div></div>
+            </div>
+          </section>
+
+          <section class="card-box">
+            <h3>Overlay Customization</h3>
+            <div class="field-row">
+              <div class="field" style="max-width:180px">
+                <label for="det-box-style">Box Style</label>
+                <select id="det-box-style">
+                  <option value="solid">Solid</option>
+                  <option value="dashed">Dashed</option>
+                  <option value="corner">Corner</option>
+                </select>
+              </div>
+              <div class="field" style="max-width:180px">
+                <label for="det-line-width">Line Width</label>
+                <input id="det-line-width" type="range" min="1" max="5" step="0.5" value="1.5" />
+              </div>
+              <div class="field" style="max-width:180px">
+                <label for="det-fill-alpha">Fill Opacity</label>
+                <input id="det-fill-alpha" type="range" min="0" max="0.45" step="0.01" value="0.09" />
+              </div>
+              <div class="field" style="max-width:180px">
+                <label for="det-max-boxes">Max Boxes</label>
+                <input id="det-max-boxes" type="number" min="1" max="200" value="120" />
+              </div>
+            </div>
+
+            <div class="field-row">
+              <div class="field" style="max-width:180px">
+                <label for="det-color-car">Car Color</label>
+                <input id="det-color-car" type="color" value="#29B6F6" />
+              </div>
+              <div class="field" style="max-width:180px">
+                <label for="det-color-truck">Truck Color</label>
+                <input id="det-color-truck" type="color" value="#FF7043" />
+              </div>
+              <div class="field" style="max-width:180px">
+                <label for="det-color-bus">Bus Color</label>
+                <input id="det-color-bus" type="color" value="#AB47BC" />
+              </div>
+              <div class="field" style="max-width:180px">
+                <label for="det-color-motorcycle">Motorcycle Color</label>
+                <input id="det-color-motorcycle" type="color" value="#FFD600" />
+              </div>
+            </div>
+
+            <div class="field-row">
+              <div class="field" style="max-width:210px">
+                <label for="det-show-labels">Show Labels</label>
+                <select id="det-show-labels">
+                  <option value="1">Enabled</option>
+                  <option value="0">Disabled</option>
+                </select>
+              </div>
+              <div class="field" style="max-width:260px">
+                <label for="det-show-zone-only">Render Boxes In Detect Zone Only</label>
+                <select id="det-show-zone-only">
+                  <option value="0">No (Full Feed)</option>
+                  <option value="1">Yes (Visual Filter)</option>
+                </select>
+              </div>
+            </div>
+
+            <h3 style="margin-top:12px;">Feed Appearance (Admin View Only)</h3>
+            <div class="field-row">
+              <div class="field" style="max-width:220px">
+                <label for="det-video-brightness">Brightness <span id="det-video-brightness-val" class="muted">100%</span></label>
+                <input id="det-video-brightness" type="range" min="50" max="180" step="1" value="100" />
+              </div>
+              <div class="field" style="max-width:220px">
+                <label for="det-video-contrast">Contrast <span id="det-video-contrast-val" class="muted">100%</span></label>
+                <input id="det-video-contrast" type="range" min="50" max="200" step="1" value="100" />
+              </div>
+              <div class="field" style="max-width:220px">
+                <label for="det-video-saturate">Saturation <span id="det-video-saturate-val" class="muted">100%</span></label>
+                <input id="det-video-saturate" type="range" min="0" max="220" step="1" value="100" />
+              </div>
+            </div>
+
+            <div class="field-row">
+              <div class="field" style="max-width:220px">
+                <label for="det-video-hue">Hue Rotate <span id="det-video-hue-val" class="muted">0deg</span></label>
+                <input id="det-video-hue" type="range" min="0" max="360" step="1" value="0" />
+              </div>
+              <div class="field" style="max-width:220px">
+                <label for="det-video-blur">Blur <span id="det-video-blur-val" class="muted">0.0px</span></label>
+                <input id="det-video-blur" type="range" min="0" max="4" step="0.1" value="0" />
+              </div>
+            </div>
+
+            <div class="ml-control-actions">
+              <button id="btn-det-save" class="btn-primary" type="button">Save Detection Settings</button>
+              <button id="btn-det-reset" class="btn-secondary" type="button">Reset Defaults</button>
+              <span id="det-settings-msg" class="muted"></span>
+            </div>
+          </section>
         </div>
       </section>
 
