--- a/public/admin.html
+++ b/public/admin.html
@@ -464,7 +464,9 @@
             <h3>Live Capture Logs</h3>
             <div id="ml-capture-log" class="rounds-list data-list"><p class="loading">Loading live capture logs...</p></div>
             <div class="ml-control-actions" style="margin-top:10px;">
+              <button id="btn-toggle-capture-pause" class="btn-secondary" type="button">Pause Capture</button>
               <button id="btn-copy-capture-error" class="btn-secondary" type="button">Copy Latest Upload Error</button>
+              <span id="ml-capture-pause-msg" class="muted"></span>
               <span id="ml-capture-copy-msg" class="muted"></span>
             </div>
           </div>
