--- a/public/index.html
+++ b/public/index.html
@@ -235,6 +235,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/hls.js@1/dist/hls.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/pixi.js@7.4.3/dist/pixi.min.js"></script>
 
   <script src="/js/config.js"></script>
   <script src="/js/supabase-init.js"></script>
